made a small change

--- a/index0.html
+++ b/index0.html
@@ -10,7 +10,7 @@
 
 <body>
 <div id="back">
-<h1>WELCOME TO WINDSOR</h1>
+<h1>WELCOME TO WINDSOR,CANADA</h1>
 <H2>CELEBRATING 125 YEARS</H2>
 </div>
 <div class="common">
